# hardware-id-generator

./: .gitignore  CMakeLists.txt  hardware_gen.cpp  hardware_gen.hpp
implementation/: log.cpp  log.hpp  md5.cpp  md5.hpp  util.cpp  util.hpp  version.cpp  version.hpp
implementation/linux/: linux_manager.cpp  linux_manager.hpp
implementation/mac/: mac_manager.cpp  mac_manager.hpp
implementation/windows/: windows_manager.cpp  windows_manager.hpp
test-run/: CMakeLists.txt  main.cpp
